2007-03-29  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclProc.c (Tcl_ApplyObjCmd):
	* tests/apply.test (9.3): Fixed Tcl_Obj leak on error return; an
	unneeded ref to lambdaPtr was being set and not released on an
	error return path.

2007-03-28  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCmdMZ.c (STR_REVERSE):	Implement the actual
	[string reverse] command in terms of the new TclStringObjReverse()
	routine.

	* generic/tclInt.h (TclStringObjReverse):	New internal routine
	* generic/tclStringObj.c (TclStringObjReverse):	that implements the
	[string reverse] operation, making use of knowledge/surgery of the
	String intrep to minimize the number of allocs and copies needed to
	do the job.

2007-03-27  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCmdMZ.c (STR_MAP): Replace ckalloc calls with
	TclStackAlloc calls.

2007-03-24  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* win/tclWinThrd.c: Thread exit handler marks the current
	thread as un-initialized. This allows exit handlers that
	are registered later to re-initialize this subsystem in
	case they need to use some sync primitives (cond variables)
	from this file again.

2007-03-23  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c (DeleteInterpProc): pop the root frame
	pointer before deleting the global namespace [Bug 1658572]

2007-03-23  Kevin B. Kenny  <kennykb@acm.org>

	* win/Makefile.in: Added code to keep a Cygwin path name from
	leaking into LIBRARY_DIR when doing 'make test' or 'make runtest'.
	
2007-03-22  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCmdAH.c (Tcl_ForeachObjCmd):	Replaced arrays
	on the C stack and ckalloc calls with TclStackAlloc calls to use
	memory on Tcl's evaluation stack.

	* generic/tclExecute.c:	Revised GrowEvaluationStack to take an
	argument specifying the growth required by the caller, so that
	a single reallocation / copy is the most that will ever be needed
	even when required growth is large.
